data/repos_history/AleCigolini/notifications-api/2025-09-29T00:37:11Z/kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hackaton-notificationsapi
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: hackaton-notificationsapi
  template:
    metadata:
      labels:
        app: hackaton-notificationsapi
    spec:
      containers:
        - name: hackaton-notificationsapi
          image: alecigolini/hackaton-notificationsapi:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "400m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: hackaton-notificationsapi-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: hackaton-notificationsapi
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hackaton-notificationsapi-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: hackaton-notificationsapi-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hackaton-notificationsapi-ingress-sse
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "36000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "36000"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/keepalive: "on"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://storagefiapdev.z15.web.core.windows.net"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-max-age: "86400"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /notifications/sse/messages
            pathType: Prefix
            backend:
              service:
                name: hackaton-notificationsapi-service
                port:
                  number: 80
